- added tabindexes to contact form - moved custom select style from product page to main layout - decreased css3 transition time - updated input/button styles - removed margin to prevent sidebar from jumping down on small window size

--- a/source/stylesheets/_config.css.sass
+++ b/source/stylesheets/_config.css.sass
@@ -11,10 +11,10 @@ $link-color: #{'{{ theme.link_color }}'}
 $border-color: #{'{{ theme.border_color }}'}
 
 @mixin all-transitions
-  -webkit-transition: all 0.3s ease-in-out
-  -moz-transition: all 0.3s ease-in-out
-  -o-transition: all 0.3s ease-in-out
-  transition: all 0.3s ease-in-out
+  -webkit-transition: all 0.2s ease-in-out
+  -moz-transition: all 0.2s ease-in-out
+  -o-transition: all 0.2s ease-in-out
+  transition: all 0.2s ease-in-out
 
 $break-extra-large: 1200px
 $break-large: 945px
